--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="муцинулитки здоровьекожи натуральныйуход длякрасоты омоложениекожи ежедневныйуход оставайтесьдома уходзалицомителом натуральнаякрасота муцин экофермаулиточка">
-    <meta name="keywords" content="муцинулитки здоровьекожи натуральныйуход длякрасоты омоложениекожи ежедневныйуход оставайтесьдома уходзалицомителом натуральнаякрасота муцин экофермаулиточка" />
+    <meta name="description" content="муцинулитки здоровьекожи натуральныйуход весеннее весенние веснаидёт фермерство длякрасоты краскивесны весенний день">
+    <meta name="keywords" content="муцинулитки здоровьекожи натуральныйуход весеннее весенние веснаидёт фермерство длякрасоты краскивесны весенний день" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Муцин Улитки." />
-    <meta property="og:description" content="муцинулитки здоровьекожи натуральныйуход длякрасоты омоложениекожи ежедневныйуход оставайтесьдома уходзалицомителом натуральнаякрасота муцин экофермаулиточка" />
+    <meta property="og:description" content="муцинулитки здоровьекожи натуральныйуход весеннее весенние веснаидёт фермерство длякрасоты краскивесны весенний день" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="ulitochka_eco_farm" />
 
@@ -79,7 +79,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=5KPzc639RWYAX8fMzQy&oh=79c75d5e5b799b159c2bc2ac08d4b82c&oe=5EB0E332" alt="Муцин Улитки."></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=hnwIDg8zRCMAX-8EOQz&oh=ff27718c460dbacd43e0a7cd858d65a3&oe=5EB4D7B2" alt="Муцин Улитки."></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</a>
 						<div class="header__title">Муцин Улитки.</div>
@@ -191,6 +191,87 @@
 									</a>
 								</div>
 							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="весеннее">
+									<a href="./tags/./vesennee.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/vesennee.png);"></div>
+										<div class="stories__slide-txt" style="		color: #FFFFFF;
+">весеннее</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="весенние">
+									<a href="./tags/./vesennie.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/vesennie.png);"></div>
+										<div class="stories__slide-txt" style="		color: #FFFFFF;
+">весенние</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="веснаидёт">
+									<a href="./tags/./vesnaidyot.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/vesnaidyot.png);"></div>
+										<div class="stories__slide-txt" style="		color: #FFFFFF;
+">веснаидёт</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="фермерство">
+									<a href="./tags/./fermerstvo.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/fermerstvo.png);"></div>
+										<div class="stories__slide-txt" style="		color: #FFFFFF;
+">фермерство</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="краскивесны">
+									<a href="./tags/./kraskivesny.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/kraskivesny.png);"></div>
+										<div class="stories__slide-txt" style="		color: #FFFFFF;
+">краскивесны</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="весенний день">
+									<a href="./tags/./vesenniy-den-.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/vesenniy-den-.png);"></div>
+										<div class="stories__slide-txt" style="		color: #FFFFFF;
+">весенний день</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="веснапрекрасна">
+									<a href="./tags/./vesnaprekrasna.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/vesnaprekrasna.png);"></div>
+										<div class="stories__slide-txt" style="		color: #FFFFFF;
+">веснапрекрасна</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="весеннее настроение">
+									<a href="./tags/./vesennee-nastroenie.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/vesennee-nastroenie.png);"></div>
+										<div class="stories__slide-txt" style="		color: #FFFFFF;
+">весеннее настроение</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="история экофермаулиточка">
+									<a href="./tags/./istoriya-ekofermaulitochka.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/istoriya-ekofermaulitochka.png);"></div>
+										<div class="stories__slide-txt" style="		color: #FFFFFF;
+">история экофермаулиточка</div>
+									</a>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div class="stories__arrow stories__arrow--prev" id="js-stories-prev"></div>
@@ -294,7 +375,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 								<a href="./posts/./xxskol-ko-nalivat--vody.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>61</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>63</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/91570969_222465489025459_1619672187752612178_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=OiiMo9jhLq0AX8eoIvl&oh=212c992132d66b17b92bffa7c81a0358&oe=5EB4B760" alt="🐌Сколько наливать воды?">
 									</div>
@@ -307,11 +388,22 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>51</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91324457_527907044581269_8511334676281573971_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=swN6px1xaO0AX_xFHib&oh=e3b804643c6fb574428de4a82c475a3e&oe=5EB101E5" alt="Дорогие, друзья!">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91324457_527907044581269_8511334676281573971_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=swN6px1xaO0AX_xFHib&oh=e1c332c21fa07a62170739f0f994315c&oe=5EB4F665" alt="Дорогие, друзья!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
 ">Дорогие, друзья!</div>
+								</a>
+								<a href="./posts/./lyubovanie-prirodoy-vdokhnovlyaet.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>35</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91849156_848878895515729_8687827037658252189_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=6aShmb_ORhoAX8DFj4u&oh=f5196cb0f54131bf24eac022b4663455&oe=5EB35AE2" alt="Любование природой вдохновляет">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #FFFFFF;
+">Любование природой вдохновляет</div>
 								</a>
 							</div>
 						</div>
