--- a/stories.html
+++ b/stories.html
@@ -60,7 +60,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=5KPzc639RWYAX8fMzQy&oh=79c75d5e5b799b159c2bc2ac08d4b82c&oe=5EB0E332" alt="Муцин Улитки." /></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=hnwIDg8zRCMAX-8EOQz&oh=ff27718c460dbacd43e0a7cd858d65a3&oe=5EB4D7B2" alt="Муцин Улитки." /></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</div>
 						<div class="header__title">Муцин Улитки.</div>
@@ -105,6 +105,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="lyubovanie-prirodoy-vdokhnovlyaet" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91849156_848878895515729_8687827037658252189_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=6aShmb_ORhoAX8DFj4u&oh=f5196cb0f54131bf24eac022b4663455&oe=5EB35AE2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Любование природой вдохновляет">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="xxskol-ko-nalivat--vody" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/91570969_222465489025459_1619672187752612178_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=OiiMo9jhLq0AX8eoIvl&oh=212c992132d66b17b92bffa7c81a0358&oe=5EB4B760" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🐌Сколько наливать воды?">
@@ -117,7 +127,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="dorogiex-druz-ya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91324457_527907044581269_8511334676281573971_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=swN6px1xaO0AX_xFHib&oh=e3b804643c6fb574428de4a82c475a3e&oe=5EB101E5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Дорогие, друзья!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91324457_527907044581269_8511334676281573971_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=swN6px1xaO0AX_xFHib&oh=e1c332c21fa07a62170739f0f994315c&oe=5EB4F665" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Дорогие, друзья!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
