--- a/error.html
+++ b/error.html
@@ -116,7 +116,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>68</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91849156_848878895515729_8687827037658252189_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=PQqZyQihUO0AX9MBp6a&oh=71e1a41b4a43a11a491316d3f33e5eb2&oe=5EB74F62" alt="Любование природой вдохновляет">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91849156_848878895515729_8687827037658252189_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=PQqZyQihUO0AX9MBp6a&oh=6c80ca1899adcfb841ef56f714c11ce4&oe=5EBB43E2" alt="Любование природой вдохновляет">
 							</div>
 							<div class="article-more__item-name">Любование природой вдохновляет</div>
 						</a>
@@ -125,7 +125,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>64</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/91570969_222465489025459_1619672187752612178_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=f7reFrYI770AX_5sbFc&oh=4828626d6d40bc416543b0883623e830&oe=5EB8ABE0" alt="🐌Сколько наливать воды?">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/91570969_222465489025459_1619672187752612178_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=JcBtGEoyj7EAX8urCb6&oh=5ee8942de55027747191e4134f3f1644&oe=5EB8ABE0" alt="🐌Сколько наливать воды?">
 							</div>
 							<div class="article-more__item-name">🐌Сколько наливать воды?</div>
 						</a>
@@ -134,9 +134,18 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>53</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91324457_527907044581269_8511334676281573971_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=kej5kquUiMsAX-uO1eN&oh=7e896209bb798679eddb48742c86ede9&oe=5EB8EAE5" alt="Дорогие, друзья!">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/91324457_527907044581269_8511334676281573971_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=kej5kquUiMsAX-uO1eN&oh=84b4c5e62a94f20c39be84c6e40e95a4&oe=5EB8EAE5" alt="Дорогие, друзья!">
 							</div>
 							<div class="article-more__item-name">Дорогие, друзья!</div>
+						</a>
+							<a href="./posts/./mozhno-li-dobavit--mutsin.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>40</span>
+								</div>
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/92438355_596151507651625_2124119327205621401_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=64G52qX_2H4AX82cAaM&oh=2db95368cc98c2b586cf92c4801911e2&oe=5EB79094" alt="Можно ли добавить муцин">
+							</div>
+							<div class="article-more__item-name">Можно ли добавить муцин</div>
 						</a>
 						</div>
 				</div>
