--- a/stories.html
+++ b/stories.html
@@ -105,9 +105,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="mozhno-li-dobavit--mutsin" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/92438355_596151507651625_2124119327205621401_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=64G52qX_2H4AX82cAaM&oh=2db95368cc98c2b586cf92c4801911e2&oe=5EB79094" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Можно ли добавить муцин">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="lyubovanie-prirodoy-vdokhnovlyaet" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91849156_848878895515729_8687827037658252189_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=PQqZyQihUO0AX9MBp6a&oh=71e1a41b4a43a11a491316d3f33e5eb2&oe=5EB74F62" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Любование природой вдохновляет">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91849156_848878895515729_8687827037658252189_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=PQqZyQihUO0AX9MBp6a&oh=6c80ca1899adcfb841ef56f714c11ce4&oe=5EBB43E2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Любование природой вдохновляет">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -117,7 +127,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxskol-ko-nalivat--vody" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/91570969_222465489025459_1619672187752612178_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=f7reFrYI770AX_5sbFc&oh=4828626d6d40bc416543b0883623e830&oe=5EB8ABE0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🐌Сколько наливать воды?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/91570969_222465489025459_1619672187752612178_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=JcBtGEoyj7EAX8urCb6&oh=5ee8942de55027747191e4134f3f1644&oe=5EB8ABE0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🐌Сколько наливать воды?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -127,7 +137,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="dorogiex-druz-ya" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91324457_527907044581269_8511334676281573971_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=kej5kquUiMsAX-uO1eN&oh=7e896209bb798679eddb48742c86ede9&oe=5EB8EAE5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Дорогие, друзья!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/91324457_527907044581269_8511334676281573971_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=kej5kquUiMsAX-uO1eN&oh=84b4c5e62a94f20c39be84c6e40e95a4&oe=5EB8EAE5" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Дорогие, друзья!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
