--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="муцинулитки здоровьекожи длякрасоты натуральныйуход муцин экофермаулиточка длякожи весеннее весенние веснаидёт фермерство">
-    <meta name="keywords" content="муцинулитки здоровьекожи длякрасоты натуральныйуход муцин экофермаулиточка длякожи весеннее весенние веснаидёт фермерство" />
+    <meta name="description" content="">
+    <meta name="keywords" content="" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Муцин Улитки." />
-    <meta property="og:description" content="муцинулитки здоровьекожи длякрасоты натуральныйуход муцин экофермаулиточка длякожи весеннее весенние веснаидёт фермерство" />
+    <meta property="og:description" content="" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="ulitochka_eco_farm" />
 
@@ -96,225 +96,6 @@
 "
 >
 
-		<div class="stories">
-			<div class="container">
-				<div class="stories__slider-wrap">
-					<div class="stories__slider" id="js-stories-slider">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<div class="stories__slide" title="муцинулитки">
-									<a href="./tags/./mutsinulitki.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/mutsinulitki.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">муцинулитки</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="здоровьекожи">
-									<a href="./tags/./zdorov-ekozhi.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/zdorov-ekozhi.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">здоровьекожи</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="длякрасоты">
-									<a href="./tags/./dlyakrasoty.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/dlyakrasoty.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">длякрасоты</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="муцин экофермаулиточка">
-									<a href="./tags/./mutsin-ekofermaulitochka.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/mutsin-ekofermaulitochka.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">муцин экофермаулиточка</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="натуральныйуход">
-									<a href="./tags/./natural-nyyukhod.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/natural-nyyukhod.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">натуральныйуход</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="весеннее">
-									<a href="./tags/./vesennee.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/vesennee.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">весеннее</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="весенние">
-									<a href="./tags/./vesennie.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/vesennie.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">весенние</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="веснаидёт">
-									<a href="./tags/./vesnaidyot.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/vesnaidyot.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">веснаидёт</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="фермерство">
-									<a href="./tags/./fermerstvo.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/fermerstvo.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">фермерство</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="краскивесны">
-									<a href="./tags/./kraskivesny.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/kraskivesny.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">краскивесны</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="весенний день">
-									<a href="./tags/./vesenniy-den-.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/vesenniy-den-.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">весенний день</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="веснапрекрасна">
-									<a href="./tags/./vesnaprekrasna.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/vesnaprekrasna.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">веснапрекрасна</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="весеннее настроение">
-									<a href="./tags/./vesennee-nastroenie.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/vesennee-nastroenie.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">весеннее настроение</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="история экофермаулиточка">
-									<a href="./tags/./istoriya-ekofermaulitochka.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/istoriya-ekofermaulitochka.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">история экофермаулиточка</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="омоложениекожи">
-									<a href="./tags/./omolozheniekozhi.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/omolozheniekozhi.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">омоложениекожи</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="ежедневныйуход">
-									<a href="./tags/./ezhednevnyyukhod.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ezhednevnyyukhod.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">ежедневныйуход</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="уходзалицомителом">
-									<a href="./tags/./ukhodzalitsomitelom.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ukhodzalitsomitelom.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">уходзалицомителом</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="натуральнаякрасота">
-									<a href="./tags/./natural-nayakrasota.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/natural-nayakrasota.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">натуральнаякрасота</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="длякожи">
-									<a href="./tags/./dlyakozhi.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/dlyakozhi.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">длякожи</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="молодостьлица">
-									<a href="./tags/./molodost-litsa.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/molodost-litsa.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">молодостьлица</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="домашнийкосметолог">
-									<a href="./tags/./domashniykosmetolog.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/domashniykosmetolog.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">домашнийкосметолог</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="домашнийуходзалицом">
-									<a href="./tags/./domashniyukhodzalitsom.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/domashniyukhodzalitsom.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">домашнийуходзалицом</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="оставайтесьдома">
-									<a href="./tags/./ostavaytes-doma.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ostavaytes-doma.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">оставайтесьдома</div>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="stories__arrow stories__arrow--prev" id="js-stories-prev"></div>
-					<div class="stories__arrow stories__arrow--next" id="js-stories-next"></div>
-				</div>
-			</div>
-		</div>
 
 			<div class="links-page">
 				<div class="container">
@@ -408,50 +189,6 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 						<div class="container">
 							<h2 class="links-page-title">ПОПУЛЯРНЫЕ</h2>
 							<div class="article-more__list">
-								<a href="./posts/./lyubovanie-prirodoy-vdokhnovlyaet.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>68</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91849156_848878895515729_8687827037658252189_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=-r9MZ5vY5dgAX-HpHQV&oh=39c91ee66f62de2e5d281ab4d1ab6041&oe=5EBB43E2" alt="Любование природой вдохновляет">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">Любование природой вдохновляет</div>
-								</a>
-								<a href="./posts/./xxskol-ko-nalivat--vody.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>64</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/91570969_222465489025459_1619672187752612178_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=JcBtGEoyj7EAX8urCb6&oh=9b2722d5f1cc1cadbae6a9962e398bda&oe=5EBCA060" alt="🐌Сколько наливать воды?">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">🐌Сколько наливать воды?</div>
-								</a>
-								<a href="./posts/./mozhno-li-dobavit--mutsin.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>55</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/92438355_596151507651625_2124119327205621401_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=56Ma8J5JjWwAX8NM2sT&oh=8f24db1d29b243f7b62ad0f6cb085c06&oe=5EBB8514" alt="Можно ли добавить муцин">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">Можно ли добавить муцин</div>
-								</a>
-								<a href="./posts/./dorogiex-druz-ya.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>53</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/91324457_527907044581269_8511334676281573971_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=-gMv7kdlE5EAX82e6XO&oh=c67c31be93e6ed9a8daa992ad7acf1bc&oe=5EBCDF65" alt="Дорогие, друзья!">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">Дорогие, друзья!</div>
-								</a>
 							</div>
 						</div>
 					</section>		
