--- a/links.html
+++ b/links.html
@@ -79,7 +79,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=mONk-SzXGvAAX9wYITI&oh=5a9deeab6a44a60c3c8642101553e9ed&oe=5EBCC0B2" alt="Муцин Улитки."></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=_eD-Y9o5z5QAX_N0zeU&oh=4421bacab709defbef366684af5cd437&oe=5ED87032" alt="Муцин Улитки."></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</a>
 						<div class="header__title">Муцин Улитки.</div>
