--- a/links.html
+++ b/links.html
@@ -79,7 +79,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=bZ2YENL6mVcAX-0BPuv&oh=edbb501e24d6bdc5f475a8915d4360ac&oe=5EDC64B2" alt="Муцин Улитки."></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=7CMDDJOUSToAX-I3Yl3&oh=6e5dfdec14e643e95e166d337fa2d1cb&oe=5EE05932" alt="Муцин Улитки."></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</a>
 						<div class="header__title">Муцин Улитки.</div>
@@ -189,6 +189,17 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 						<div class="container">
 							<h2 class="links-page-title">ПОПУЛЯРНЫЕ</h2>
 							<div class="article-more__list">
+								<a href="./posts/./znaete-pochemu-pri-regulyarnom.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>54</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95823266_518928085470451_3928079594619804209_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=DDBOxQ6hOoYAX_ASoGA&oh=5e4783c6e545a5ed5cb65c44c8e7c904&oe=5EDE4BF7" alt="Знаете почему при регулярном">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #FFFFFF;
+">Знаете почему при регулярном</div>
+								</a>
 							</div>
 						</div>
 					</section>		
