--- a/error.html
+++ b/error.html
@@ -114,11 +114,20 @@
 							<a href="./posts/./znaete-pochemu-pri-regulyarnom.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>54</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>56</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95823266_518928085470451_3928079594619804209_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=DDBOxQ6hOoYAX_ASoGA&oh=5e4783c6e545a5ed5cb65c44c8e7c904&oe=5EDE4BF7" alt="Знаете почему при регулярном">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95823266_518928085470451_3928079594619804209_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=DDBOxQ6hOoYAX_ASoGA&oh=69462975cb2aa222c3db4f67acdfce19&oe=5EE24077" alt="Знаете почему при регулярном">
 							</div>
 							<div class="article-more__item-name">Знаете почему при регулярном</div>
+						</a>
+							<a href="./posts/./slishkom-mnogo-boli-i-gorya-ispytali.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>41</span>
+								</div>
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/96686208_287487048933072_5984727298415223732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=StX5cqXzr9MAX86gKyd&oh=2b9d4c1eb5bf34762336873525025dbc&oe=5EDF0AB7" alt="Слишком много боли и горя испытали">
+							</div>
+							<div class="article-more__item-name">Слишком много боли и горя испытали</div>
 						</a>
 						</div>
 				</div>
