--- a/stories.html
+++ b/stories.html
@@ -105,9 +105,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="slishkom-mnogo-boli-i-gorya-ispytali" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/96686208_287487048933072_5984727298415223732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=StX5cqXzr9MAX86gKyd&oh=2b9d4c1eb5bf34762336873525025dbc&oe=5EDF0AB7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Слишком много боли и горя испытали">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="znaete-pochemu-pri-regulyarnom" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95823266_518928085470451_3928079594619804209_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=DDBOxQ6hOoYAX_ASoGA&oh=5e4783c6e545a5ed5cb65c44c8e7c904&oe=5EDE4BF7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Знаете почему при регулярном">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95823266_518928085470451_3928079594619804209_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=DDBOxQ6hOoYAX_ASoGA&oh=69462975cb2aa222c3db4f67acdfce19&oe=5EE24077" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Знаете почему при регулярном">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
