--- a/error.html
+++ b/error.html
@@ -116,7 +116,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>60</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95823266_518928085470451_3928079594619804209_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=lwcGvq8B4XQAX9QlqlR&oh=7be4f04a25b09d6899bf47498542b67e&oe=5EE634F7" alt="Знаете почему при регулярном">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95823266_518928085470451_3928079594619804209_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=lwcGvq8B4XQAX9QlqlR&oh=e4b9545a39a11fe776a82364f5fd7040&oe=5EEA2977" alt="Знаете почему при регулярном">
 							</div>
 							<div class="article-more__item-name">Знаете почему при регулярном</div>
 						</a>
@@ -128,6 +128,15 @@
 								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/96686208_287487048933072_5984727298415223732_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=4KNsKpJ4tlgAX8_km2T&oh=8e25f6774d50a13b07d17ad74a172fd2&oe=5EE6F3B7" alt="Слишком много боли и горя испытали">
 							</div>
 							<div class="article-more__item-name">Слишком много боли и горя испытали</div>
+						</a>
+							<a href="./posts/./vsem-dobrogo-dnya.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>56</span>
+								</div>
+								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/97892845_532834487387333_6216348722466696091_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=mC7JF58nyvsAX_kMOTJ&oh=4dfea5392d1f2909e31d8e776f524073&oe=5EE757DF" alt="Всем доброго дня!">
+							</div>
+							<div class="article-more__item-name">Всем доброго дня!</div>
 						</a>
 						</div>
 				</div>
