--- a/stories.html
+++ b/stories.html
@@ -105,6 +105,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="pishete-v-direkt-mnogo" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/100528787_2838012236311246_7816431319150812568_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=110&_nc_ohc=djUpoNPiezYAX8XGbr4&oh=f178f146513abc1734d297f618bb77ee&oe=5EEEA8BD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Пишете в директ много">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="vsem-dobrogo-dnya" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/97892845_532834487387333_6216348722466696091_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=BQKODeclgKsAX80Nq_f&oh=8e5ac15a8b4cb10ce3620afd6567b630&oe=5EEF40DF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Всем доброго дня!">
@@ -127,7 +137,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="znaete-pochemu-pri-regulyarnom" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95823266_518928085470451_3928079594619804209_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=gl-TaGqEvbcAX9zKDj8&oh=76c05634948b86613c8358192ae21b37&oe=5EEE1DF7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Знаете почему при регулярном">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95823266_518928085470451_3928079594619804209_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=gl-TaGqEvbcAX9zKDj8&oh=4df20e99d1e70e6b20b200b000c645fe&oe=5EF21277" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Знаете почему при регулярном">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
