--- a/error.html
+++ b/error.html
@@ -60,7 +60,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=bzamu0RWiEYAX9G5QbX&oh=531f8815adf6894a156ed958e2e859f5&oe=5EF41FB2" alt="Муцин Улитки."></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=bzamu0RWiEYAX9G5QbX&oh=3f91c8b0ac39b0069200b74775082487&oe=5EF41FB2" alt="Муцин Улитки."></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</a>
 						<div class="header__title">Муцин Улитки.</div>
@@ -134,7 +134,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>61</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95823266_518928085470451_3928079594619804209_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=ePOwXYIJCscAX-kl4bY&oh=acdc26171483ecdb983aa7ad1376c3aa&oe=5EF21277" alt="Знаете почему при регулярном">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/95823266_518928085470451_3928079594619804209_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=ePOwXYIJCscAX-kl4bY&oh=a97b9543efecf70ea6ba50df983044b9&oe=5EF606F7" alt="Знаете почему при регулярном">
 							</div>
 							<div class="article-more__item-name">Знаете почему при регулярном</div>
 						</a>
@@ -143,7 +143,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>59</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/100528787_2838012236311246_7816431319150812568_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=110&_nc_ohc=gvSRx_ufh7IAX_Jds1V&oh=bcf30f63fa719b9d5eb3c14d3c0c93d6&oe=5EF29D3D" alt="Пишете в директ много">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/100528787_2838012236311246_7816431319150812568_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=110&_nc_ohc=gvSRx_ufh7IAX_Jds1V&oh=466cc4b61bc8a53f63b9134e8153d908&oe=5EF691BD" alt="Пишете в директ много">
 							</div>
 							<div class="article-more__item-name">Пишете в директ много</div>
 						</a>
