--- a/main.html
+++ b/main.html
@@ -66,7 +66,7 @@
 				<div class="main-sec__wrap">
 					<div class="main-sec__logo">
 						<div class="main-sec__logo-pic">
-							<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=hYCRuI2oXAQAX9-AlgU&oh=465f94fead727f52458b4e1138d7645d&oe=5F03F1B2" alt="Муцин Улитки.">
+							<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=OWwYITgrtVsAX8bUYW8&oh=d30163500447636ead4d6eea689cd11d&oe=5F07E632" alt="Муцин Улитки.">
 						</div>
 					</div>
 					<div class="main-sec__txt">
