--- a/error.html
+++ b/error.html
@@ -60,7 +60,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=OWwYITgrtVsAX8bUYW8&oh=d30163500447636ead4d6eea689cd11d&oe=5F07E632" alt="Муцин Улитки."></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=MU-owz7JPDkAX_jYI2j&oh=a8b5a83a880ac020b87010bb88af8ae1&oe=5F0BDAB2" alt="Муцин Улитки."></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</a>
 						<div class="header__title">Муцин Улитки.</div>
@@ -111,6 +111,15 @@
 				<div class="container">
 					<h2 class="article-more__title">ПОПУЛЯРНЫЕ</h2>
 					<div class="article-more__list">
+							<a href="./posts/./vsem-privet.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>53</span>
+								</div>
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/102870434_564301107463252_1535158034270071031_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=0WNUjNOwfTsAX9XESaI&oh=805ba904df443f01048f03f959d943f0&oe=5EE3E83D" alt="Всем привет!">
+							</div>
+							<div class="article-more__item-name">Всем привет!</div>
+						</a>
 						</div>
 				</div>
 			</section>		
