--- a/stories.html
+++ b/stories.html
@@ -60,7 +60,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=OWwYITgrtVsAX8bUYW8&oh=d30163500447636ead4d6eea689cd11d&oe=5F07E632" alt="Муцин Улитки." /></div>
+							<div class="header__logo-pic"><img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_ohc=MU-owz7JPDkAX_jYI2j&oh=a8b5a83a880ac020b87010bb88af8ae1&oe=5F0BDAB2" alt="Муцин Улитки." /></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</div>
 						<div class="header__title">Муцин Улитки.</div>
@@ -103,6 +103,16 @@
 		<div class="items" id="js-items">
 			<div class="container">
 				<div class="items-main" id="js-items-main">
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="vsem-privet" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/102870434_564301107463252_1535158034270071031_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=0WNUjNOwfTsAX9XESaI&oh=805ba904df443f01048f03f959d943f0&oe=5EE3E83D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Всем привет!">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
 				</div>
 			</div>
 		</div>	
