--- a/stories.html
+++ b/stories.html
@@ -105,9 +105,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="svobodnye-aminokisloty-xx" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/104009624_571055376932755_3407652240580891572_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=nhgVhB7Hbt0AX9Ezcby&oh=a5a1b60a76899deb0d28107fe3f8298d&oe=5F0F4A4C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Свободные аминокислоты 🔬">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="vsem-privet" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/102870434_564301107463252_1535158034270071031_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=IuQAoRnrRqsAX_BpLS9&oh=aba05035d8c1de101c53762b03549e59&oe=5EE7DCBD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Всем привет!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/102870434_564301107463252_1535158034270071031_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=IuQAoRnrRqsAX_BpLS9&oh=20928f2c2349e9db83aeac75db87c2de&oe=5EE92E3D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Всем привет!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
