--- a/error.html
+++ b/error.html
@@ -116,9 +116,18 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>63</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/102870434_564301107463252_1535158034270071031_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=IuQAoRnrRqsAX_BpLS9&oh=aba05035d8c1de101c53762b03549e59&oe=5EE7DCBD" alt="Всем привет!">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/102870434_564301107463252_1535158034270071031_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=IuQAoRnrRqsAX_BpLS9&oh=20928f2c2349e9db83aeac75db87c2de&oe=5EE92E3D" alt="Всем привет!">
 							</div>
 							<div class="article-more__item-name">Всем привет!</div>
+						</a>
+							<a href="./posts/./svobodnye-aminokisloty-xx.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>37</span>
+								</div>
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/104009624_571055376932755_3407652240580891572_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=107&_nc_ohc=nhgVhB7Hbt0AX9Ezcby&oh=a5a1b60a76899deb0d28107fe3f8298d&oe=5F0F4A4C" alt="Свободные аминокислоты 🔬">
+							</div>
+							<div class="article-more__item-name">Свободные аминокислоты 🔬</div>
 						</a>
 						</div>
 				</div>
